--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer-form-wrapper">
+        <div class="footer-form-wrapper container">
           <p class="footer-text-form">Subscribe</p>
           <form class="form-footer">
             <label class="footer-form-field-wrapper">
