--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </li>
           </ul>
 
-          <div class="contacts-mobile-wrapper">
+          <div class="contacts-mobile-wrapper container">
             <ul class="list">
               <li class="mobile-menu-contact-item">
                 <a class="mobile-menu-contact-info link" href="./portfolio.html"
