--- a/portfolio.html
+++ b/portfolio.html
@@ -297,7 +297,7 @@
                         ./images/portfolio-mobile/payment-mobile@1x.jpg 1x,
                         ./images/portfolio-mobile/payment-mobile@2x.jpg 2x
                       "
-                      media="(main-width: 320px) "
+                      media="(min-width: 320px) "
                     />
                     <img
                       class="list-img"
